--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,11 @@
     <string name="app_name">FeedItBack</string>
     <string name="hintEmail">Email</string>
     <string name="hintPassword">Password</string>
+    <string name="hintPassword1">New Password</string>
+    <string name="hintPassword2">Confirm Password</string>
     <string name="hintName">Name</string>
-    <string name="signupHint">No account yet? Create one</string>
-    <string name="loginHint">Already a member? Login</string>
+    <string name="signupHint">No account yet?<b>Create one</b></string>
+    <string name="loginHint">Already a member?<b>Login</b></string>
     <string name="signupButtonHint">CREATE ACCOUNT</string>
     <string name="loginButtonHint">LOGIN</string>
 </resources>
